# Red-Pill-Protocol---GPT4ALL---Voice-Selector

./: .dockerignore  .env  .env.example  .git_remote_tmp  .git_status_tmp  .gitignore  ARCHITECTURE.md  B760_TECHNICAL_SPEC.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  MANIFESTO.md  MEMORIAL.md  OPERATOR_MANUAL.md  QUICKSTART.md  README.md  SECURITY.md  SMITH_AUDIT.md  TESTS.md  WELCOME_NEO.md  pyproject.toml  requirements.txt  test_horde.py  test_mic.py
local_qdrant_db_v2/: meta.json
local_qdrant_db_v2/collection/social_memories/: storage.sqlite
local_qdrant_db_v2/collection/work_memories/: storage.sqlite
scripts/: backup_qdrant.sh  backup_soul.sh  check_760.sh  debug_gpt4all.py  export_soul.sh  forge_pill.sh  import_soul.sh  install_neo.ps1  install_neo.ps1.bak  install_neo.sh  restore_all.sh  uninstall.sh  verify_gpt4all.py  verify_local_qdrant.py
seeds/: identity_template.md  persona_template.md  snapshot_rule.md
skills/context_distiller/: SKILL.md
src/red_pill/: app.py  chat.py  cli.py  config.py  memory.py  schemas.py  seed.py  state.py
src/red_pill/data/: lore_skins.yaml
tests/: Dockerfile.keymaker  stress_test_smith.py  test_memory.py  test_qdrant_compat.py
